[DOR-145] Fix layout issue

--- a/app/assets/stylesheets/print-receipt.scss
+++ b/app/assets/stylesheets/print-receipt.scss
@@ -10,6 +10,7 @@ $hmrc-assets-path: "/send-documents-for-customs-check/assets/lib/hmrc-frontend/h
 .govuk-phase-banner,
 .hmrc-language-select,
 .govuk-footer,
+.report-a-problem,
 .print-receipt-hide {
   display: none;
 }
